[package]
name = "libquil-sys"
version = "0.1.0"
edition = "2021"
links = "quilc"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.53.1"

[dev-dependencies]
quil-rs = "0.19.0"

