[package]
name = "libquil-sys"
version = "0.1.0"
edition = "2021"
links = "quilc"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libloading = "0.8.0"
num-complex = "0.4.4"
serde_json = "1.0.105"
thiserror = "1.0.44"
paste = "1.0.6"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.53.1"

[dev-dependencies]
assert2 = "0.3.11"
quil-rs = "0.19.0"

