[package]
name = "libquil-sys"
description = "High-level bindings to libquil"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rigetti/libquil-sys"
keywords = ["pyquil", "Quil", "libquil", "quilc", "QVM"]
links = "quilc"
build = "build.rs"
categories = ["compilers", "api-bindings"]
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libloading = "0.8.0"
num-complex = "0.4.4"
serde_json = "1.0.105"
thiserror = "1.0.44"
paste = "1.0.6"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.53.1"
thiserror = "1.0.44"

[dev-dependencies]
assert2 = "0.3.11"
quil-rs = "0.19.0"

