[package]
name = "libquil_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "libquil"
crate-type = ["cdylib", "rlib"]

[dependencies]
libloading = "0.8.0"
libquil-sys = { path = "../lib" }
# pyo3 dependencies should be updated together
numpy = { version = "0.20" }
pyo3 = { version = "0.20", features = ["extension-module"] }
rigetti-pyo3 = "0.4"

[build-dependencies]
pyo3-build-config = { version = "0.20" }
